--- a/Test.app/Contents/Info.plist
+++ b/Test.app/Contents/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>PlayerIcon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>unity.DefaultCompany.HelloNetwork</string>
+	<string>unity.vbo.name.HelloWorld</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>HelloNetwork</string>
+	<string>HelloWorld</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
